# EriTrainer

./: .gitignore  CLAUDE.md  Cargo.toml  ERITRAINER_PLAN.md  IDEOGRAM_BC_GLUE_PORT_SPEC.md  IDEOGRAM_CAPTIONER_PORT_SPEC.md  MAP.md  README.md  TENETS.md
backend/EriDiffusion-v2/: .gitignore  Cargo.toml  MAP.md.pre-shrink-2026-05-24  PARITY_SIMPLETUNER.md  README.md  run_k9_sanitizer.sh  run_klein_cosine_3000.sh  run_qwen_alina_2000.sh
backend/EriDiffusion-v2/baselines/: README.md  klein9b.toml
backend/EriDiffusion-v2/benches/: .gitignore
backend/EriDiffusion-v2/benches/kernel_count_diff/: .gitignore  README.md  _extract.py  flame_block_bin.rs  gen_inputs.py  pytorch_block.py  run_diff.sh
backend/EriDiffusion-v2/benches/matched_config/: .gitignore  README.md  compare.py  flame_side.rs  gen_inputs.py  pytorch_side.py  run_all.sh
backend/EriDiffusion-v2/configs/: anima_smoke.json  asymflux2_klein_lora.json  boxjana_concepts.json  boxjana_ernie_lora.json  eri2_chroma_lora.json  eri2_ernie_lora.json  eri_sample_prompts.json  klein4b_eri2_baseline_diff.json  klein4b_eri2_runaway_shift18.json  klein9b_alina.json  klein9b_alina_cosine.json  klein9b_alina_shift10.json  l2p_boxjana.json  l2p_boxjana_prompts.json  l2p_diag.json  ot_python_boxjana_ernie_lora_baseline.json  sd35_smoke.json
backend/EriDiffusion-v2/crates/eridiffusion-cli/: Cargo.toml
backend/EriDiffusion-v2/crates/eridiffusion-core/: Cargo.toml
backend/EriDiffusion-v2/crates/eritrainer-dispatch/: Cargo.toml
backend/EriDiffusion-v2/crates/eritrainer-registry/: Cargo.toml
backend/EriDiffusion-v2/eri-safetensors/: Cargo.toml
backend/EriDiffusion-v2/eri-safetensors/src/: lib.rs  mmap.rs
backend/EriDiffusion-v2/parity/klein_fwd/: compare_blocks.py  decode_cached.py  ref.py  ref_lora_paramgrad.py
backend/EriDiffusion-v2/parity/klein_lora_grad/: gen_and_ref.py
backend/EriDiffusion-v2/parity/klein_norm_grad/: gen_and_ref.py
backend/EriDiffusion-v2/parity/klein_sb/: ref.py  ref_lora.py
backend/EriDiffusion-v2/parity/klein_sdpa_grad/: gen_and_ref.py
backend/EriDiffusion-v2/tests/parity/: adam8bit_bnb_python_ref.py  adam8bit_bnb_python_ref_bf16grad.py  adam8bit_bnb_python_ref_multistep.py  adam8bit_bnb_python_ref_tail.py  adam8bit_bnb_python_ref_wd.py  asymflow_a05_teacher_python_ref.py  hidream_m1_llama3_python_ref.py  hidream_o1_g0_per_layer_ref.py  hidream_o1_g0_python_ref.py  hidream_o1_train_step_ref.py  int8_torchao_python_ref.py  run_asymflow_a05.sh  run_hidream_m1.sh  run_hidream_o1_g0.sh  run_hidream_o1_g1.sh  run_hidream_o1_g2.sh
backend/eri-lycoris/lycoris-rs/: CHANGES.md  COMPLETE_STATUS.md  Cargo.toml  FINAL_VERIFICATION.md  IMPLEMENTATION_STATUS.md  README.md  SKEPTIC.md  VERIFICATION_STATUS.md
backend/eri-lycoris/lycoris-rs/examples/: basic_usage.rs
backend/eri-lycoris/lycoris-rs/src/: algorithms.rs  dora.rs  dropout.rs  dtype.rs  error.rs  layout.rs  lib.rs  loader.rs  ops.rs  tensor_utils.rs
backend/eri-lycoris/lycoris-rs/tests/: autograd_smoke.rs  loader_smoke.rs  parity.rs  parity_dump.py  smoke.rs
backend/flame-core/: .gitignore  Cargo.toml  FIXIT_MAXPOOL_INDICES_FLOAT.md  MAP.md  MAP.md.pre-shrink-2026-05-24  TENETS.md  build.rs
backend/flame-core/benches/: activation_bwd.rs  add_iter_alloc.rs  cast_bench.rs  conv2d_bench.rs  dispatch_overhead.rs  fa2_forward.rs  gelu_iter_alloc.rs  group_norm_fwd_bench.rs  launch_count_harness.sh  layer_norm_fwd_bench.rs  layer_norm_vec.rs  parse_nsys_to_json.py  permute_bench.rs  rms_norm_inference_bench.rs  rms_norm_vec.rs  sdpa_causal_bench.rs  sdpa_noncausal_bench.rs  silu_iter_alloc.rs  slice_copy_bench.rs  softmax_bench.rs  square_iter_alloc.rs  strides_alloc.rs  swiglu_bench.rs
backend/flame-core/benches/baselines/: zimage_lora_pre_phase0.json  zimage_phase0_run1.json  zimage_phase0_run2.json  zimage_phase0_run3.json  zimage_phase1_baseline.json  zimage_phase1_run1.json  zimage_phase1_run3.json  zimage_phase3_baseline.json  zimage_phase3_run1.json  zimage_phase3_run3.json  zimage_phase4_run1.json  zimage_phase4_run2.json  zimage_phase4_run3.json
backend/flame-core/cuda/: bf16_slice_index.cu  cuda_ops.cu  gemm_bf16_fp32acc.cu  narrow_strided.cu  permute0213.cu  sdpa_stream_bf16.cu
backend/flame-core/cuda/include/: sdpa_stream_bf16.h
backend/flame-core/cuda/src/: flame_norm_bf16.cu
backend/flame-core/docs/: AUTOGRAD_SPEED_GUIDE.md  AUTOGRAD_V2_DESIGN_REVIEW_HANDOFF.md  BF16_GRAD_DECISION.md  CLASS_B_NARROW_BACKWARD_HANDOFF.md  FLAME_AUTOGRAD_INTERNALS.md  FLAME_CONVENTIONS.md  FLAME_DIAGNOSTICS.md  FLAME_INDEX.md  FLAME_KERNELS.md  FLAME_MODULES.md  FLAME_README.md  OFFLOAD_GAPS_vs_ONETRAINER.md  OFFLOAD_GETTING_STARTED.md  OFFLOAD_NEXT_GEN_DESIGN.md  PHASE5D_ITEM6_RETIREMENT_AUDIT.md  PHASE5D_KLEIN9B_SMOKE_RESULTS.md  PHASE5D_NEW_V2_RESULTS.md  PHASE5D_ZLORA_SMOKE_RESULTS.md  RING_ALLOC_DESIGN.md  SPEED_CONTRACT.md  TRAINER_DIAGNOSTICS.md
backend/flame-core/kernels/: qkv_split_backward.cu  swiglu_backward.cu
backend/flame-core/scripts/: dump_pytorch_layers.py  gen_torch_compat_fixtures.py  gen_torch_randn_fixture.py  generate_nucleus_moe_parity.py
backend/flame-core/src/: activation_offload.rs  adam.rs  adam8bit_kernel.rs  autograd.rs  autograd_ops.rs  autograd_ops_complete.rs  autograd_v3.rs  bf16_clamp.rs  bf16_convert.rs  bf16_elementwise.rs  bf16_factories.rs  bf16_normal.rs  bf16_ops.rs  bf16_reduce.rs  conv.rs  conv1d.rs  conv3d.rs  conv3d_bf16.rs  conv3d_simple.rs  cuda_alloc_pool.rs  cuda_conv2d.rs  cuda_conv2d_direct.rs  cuda_conv2d_fast.rs  cuda_conv2d_kernels.rs  cuda_gradient_ops.rs  cuda_kernel_sources.rs  cuda_kernels.rs  cuda_kernels_gpu.rs  cuda_memory_alignment.rs  cuda_ops.rs  cuda_ops_bf16.rs  cuda_ops_ffi.rs  cuda_tensor.rs  cuda_tensor_gpu.rs  cuda_tensor_with_cublas.rs  device.rs  diagnostics.rs  env_flags.rs  error.rs  external_memory.rs  (+26 more)
crates/ideogram-caption/: Cargo.toml  SKEPTIC_FINDINGS_GLUE_RUST.md  SKEPTIC_FINDINGS_RUST.md
crates/ideogram-caption/src/: glue.rs  lib.rs
crates/ideogram-caption/tests/: byte_exact.rs  edge_adversarial.rs  glue_byte_exact.rs  glue_edge_adversarial.rs
(+304 files in other folders)
